--- a/client/client/src/Entrance/Entrance.css
+++ b/client/client/src/Entrance/Entrance.css
@@ -1,5 +1,5 @@
 .Entrance {
-    background-image: url('./FarmBackground.jpg');
+    background-image: url('./Background.jpg');
     background-size: cover;
     background-position: center;
 
