A lot of different changes

--- a/crossfarmer_client/src/Game/Game.css
+++ b/crossfarmer_client/src/Game/Game.css
@@ -10,3 +10,13 @@
     width: 100vw;
     height: 100vh;
 }
+
+.Game .Content {
+    width: 95vw;
+    height: 85vh;
+
+    border-radius: 15px;
+    margin: auto;
+
+    background-color: aquamarine;
+}
