--- a/crossfarmer_client/src/Entrance/Entrance.css
+++ b/crossfarmer_client/src/Entrance/Entrance.css
@@ -23,6 +23,7 @@
     padding: 2%;
 }
 
+
 .button-container {
     display: flex;
     justify-content: space-between;
@@ -32,29 +33,69 @@
     width: 47.5%;
 }
 
-.form-label {
-    padding-left: 2%;
-}
-
-button {
-    width: 100%;
-}
 
 
-.Result {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-.Result button {
-    width: 80%;
-}
 
-p.Title {
+h1 {
     text-align: center;
 
     font-size: 200%;
     font-weight: 1000;
 }
 
+
+label {
+    font-size: 150%;
+}
+
+button {
+    width: 100%;
+    border-radius: 15px;
+    
+    border: none;
+
+    font-size:250%;
+    background-color: aqua;
+}
+
+button.red {
+    background-color: hsl(0, 100%, 50%);
+}
+button.red:hover {
+    background-color: hsl(0, 100%, 70%);
+}
+button.red:active {
+    background-color: hsl(0, 100%, 30%);
+}
+
+button.green {
+    background-color: hsl(84, 100%, 59%);
+}
+button.green:hover {
+    background-color: hsl(84, 100%, 79%);
+}
+button.green:active {
+    background-color: hsl(84, 100%, 39%);
+}
+
+button.orange {
+    background-color: hsl(39, 100%, 50%);
+}
+button.orange:hover {
+    background-color: hsl(39, 100%, 70%);
+}
+button.orange:active {
+    background-color: hsl(39, 100%, 30%);
+}
+
+input {
+    width: 100%;
+    border-radius: 15px;
+
+
+    border: none;
+    margin-bottom: 5%;
+
+    font-size:250%;
+}
