Fully working typescript version of client

--- a/crossfarmer_client_typescript/crossfarmer_client_typescript/src/application/application.css
+++ b/crossfarmer_client_typescript/crossfarmer_client_typescript/src/application/application.css
@@ -9,6 +9,8 @@ div.Application {
 
     overflow: hidden;
 
+    font-size: initial;
+
     input {
         width: 100%;
         border-radius: 15px;
