--- a/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/gameplay.css
+++ b/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/gameplay.css
@@ -4,4 +4,71 @@ div.Gameplay{
 
     width: 100vw;
     height: 100vh;
+
+    div.Top{
+        background-color: rgba(255, 255, 0, 0.3);
+        width: 100%;
+        height: 10%;
+
+        border-radius: 15px;
+
+        display: flex;
+        div {
+            font-size: 200%;
+
+            text-align: center;
+            background-color: aqua;
+            
+            margin-left: 5%;
+
+            margin-top: 15px;
+            margin-bottom: 15px;
+
+            border-radius: 15px;
+
+            width: 25%;
+
+            img{
+                float: right;
+                width: auto;
+                max-height: 100%;
+            }
+        }
+
+        div:last-child{
+            margin-right: 5%;
+        }
+    }
+
+    div.Bottom {
+        width: 100%;
+        height: 90%;
+        
+        display: flex;
+
+        div.Center {
+            border-radius: 15px;
+
+            background-color: rgba(0, 0, 255, 0.2);
+            width: 80%;
+            height: 100%;
+        }
+    
+        div.Right {
+            border-radius: 15px;
+
+            background-color:rgba(128, 255, 0, 0.5);
+            width: 20%;
+            height: 100%;
+
+            button {
+                margin-top: 15px;
+                margin-left: 15px;
+
+                width: calc(100% - 30px);;
+            }
+        }
+    }
 }
+
+/*b * 4 + g * 5 = 100 */
