--- a/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/gameplay.css
+++ b/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/gameplay.css
@@ -50,7 +50,7 @@ div.Gameplay{
             border-radius: 15px;
 
             background-color: rgba(0, 0, 255, 0.2);
-            width: 80%;
+            width: 75%;
             height: 100%;
         }
     
@@ -58,14 +58,21 @@ div.Gameplay{
             border-radius: 15px;
 
             background-color:rgba(128, 255, 0, 0.5);
-            width: 20%;
+            width: 25%;
             height: 100%;
-
-            button {
-                margin-top: 15px;
+        
+            div.Content {
                 margin-left: 15px;
+                margin-right: 15px;
+                height: 100%;
 
-                width: calc(100% - 30px);;
+                div.Buttons{
+                    margin-bottom: 15px;
+                    button {
+                        margin-top: 15px;
+                        width: 100%;
+                    }
+                }
             }
         }
     }
