Backend api simplification
Changed pool with conn in many database related functions. Improved damage calculation function so in the future it will be easier to count impact of each player (and distribute awards for defeating creatures).

--- a/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/chat/chat.css
+++ b/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/chat/chat.css
@@ -1,25 +1,27 @@
 div.Chat{
-    height: 75%;
-    margin-bottom: 15px;
-    
+    display: flex;
+    flex-direction: column;
+
+    flex: 1;
+
+    overflow-x: hidden;
     
     div.Messages {
+        height: 100%;
+
+        scrollbar-width: none;
+        overflow-y: scroll;
         font-size: larger;
 
-        height: 85%;
         border-radius: 15px;
         background-color: wheat;
 
         margin-bottom: 15px;
         padding: 3px;
-
-        overflow-y: scroll;
-        scrollbar-width: none;
     }
 
     input{
         width: calc(100% - 5px);
         font-size: larger;
-        height: 7.5%;
     }
 }
