--- a/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/creatures/creatures.css
+++ b/crossfarmer_client_typescript/crossfarmer_client_typescript/src/gameplay/creatures/creatures.css
@@ -6,6 +6,11 @@ div.Creatures {
     overflow-y: scroll;
     scrollbar-width: none;
 
+
+    th{
+        color: greenyellow;
+    }
+
     table {
         width: 100%;
         
